--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -1,1 +1,3 @@
-<p>appointment-list works!</p>
+<p>{{ appointmentList.id }}</p>
+<p>{{ appointmentList.title }}</p>
+<p>{{ appointmentList.date }}</p>
