- generate appointment list in Ui using ngFor

--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -2,4 +2,10 @@
   <input [(ngModel)]="appointmentTitle" type="text" placeholder="set an appointment ">
   <input [(ngModel)]="appointmentDate" type="date" placeholder="set a date">
   <button (click)="addAppointment()">add to list</button>
+
+  <ul>
+    <li *ngFor="let appointment of appointmentList">
+      {{appointment.title}}  {{appointment.date | date: 'shortDate'}}
+    </li>
+  </ul>
 </div>
