--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -1,12 +1,34 @@
-<div>
-  <input [(ngModel)]="appointmentTitle" type="text" placeholder="set an appointment ">
-  <input [(ngModel)]="appointmentDate" type="date" placeholder="set a date">
-  <button (click)="addAppointment()">add to list</button>
+<div class="container">
+  <div class="card mt-3">
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">
+          Create New Appointment
+        </h2>
+      </div>
+    </div>
 
-  <ul>
-    <li *ngFor="let appointment of appointmentList; index as i">
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <input class="form-control" [(ngModel)]="appointmentTitle" type="text" placeholder="set an appointment ">
+      </div>
+      <div class="col-md-4">
+        <input class="form-control" [(ngModel)]="appointmentDate" type="date" placeholder="set a date">
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-primary w-100" (click)="addAppointment()">add to list</button>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="text-center mt-5">
+    Appointments
+  </h2>
+
+  <ul class="list-group mt-3">
+    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let appointment of appointmentList; index as i">
       {{ appointment.title }}  {{ appointment.date | date: 'shortDate' }}
-      <button (click)="deleteItem(i)">delete</button>
+      <button class="btn btn-danger" (click)="deleteItem(i)">delete</button>
     </li>
   </ul>
 </div>
